<resources>
    <string name="app_name">وثقني</string>
    <string name="Nheader">الشهر العقاري</string>
    <string name="Nbtn1">متطلبات الشهر العقاري</string>
    <string name="Nbtn2">معلومات شهر العقاري</string>
    <string name="Nbtn3">شكاوى / مقترحات</string>
    <string name="Nbtn4">مكان الشهر العقارى</string>
    <string name="Nbtn5">استخراج صورة من مشهر</string>
    <string name="Nbtn6">استخراج شهادة عقارية</string>
    <string name="Nbtn7">استعلام عن موقف طلب</string>
    <string name="Nbtn8">استخراج صورة من كتاب دوري</string>
    <string name="Nbtn9">استخراج صوره من منشور مالي</string>
    <string name="Nbtn10">استخراج صوره من منشور فني</string>
    <string name="Nbtn11">ترجمة صوره من عقد الي اللغه الانجليزيه</string>
    <string name="Nbtn12">ترجمة عقد زواج الي اللغه الانجليزيه</string>
    <string name="Nbtn13">ترجمة اشهاد طلاق الي اللغه الانجليزيه</string>
    <string name="wbtn1">توكيل رسمى عام شامل(عام+بنوك)</string>
    <string name="wbtn2">توكيل رسمى عام</string>
    <string name="wbtn3">توكيل رسمى عام فى القضايا</string>
    <string name="wbtn4">توكيل رسمى عام فى الضرايب</string>
    <string name="wbtn5">توكيل رسمي عام فى الرهن العقاري</string>
    <string name="wbtn6">توكيل رسمي عام فى صرف المعاش</string>
    <string name="wbtn7">توكيل فى الامور الزوجية</string>
    <string name="wbtn8">توكيل عام مخصص</string>
    <string name="wbtn9">عقد ايجار رسمى فى الشكل الرسمى</string>
    <string name="wbtn10">محضر ايداع رسمى</string>
    <string name="wbtn11">عقد بيع سياره</string>
    <string name="wbtn12">توكيل خاص بادارة سياره</string>
    <string name="wbtn13">توكيل خاص بيع سياره</string>
    <string name="wbtn14">محضر تصالح</string>
    <string name="wbtn15">شهاده خبره</string>
    <string name="wbtn16">اثبات تاريخ</string>
    <string name="wbtn17">شهاد من محضر التصديق</string>
    <string name="wbtn18">صوره رسميه من المحرر</string>
    <string name="wbtn19">شهاده من دفتر ايصال سداد الرسوم</string>
    <string name="wbtn20">اقرار بالشهادة</string>
    <string name="wbtn21">طلب اطلاع</string>
    <string name="wbtn22">التاشير على السجلات التجارية</string>
    <string name="wbtn23">توكيل رسمى عام بالصفه من سجل تجارى</string>
    <string name="wbtn24">توكيل رسمى عام بالصفه من توكيل رسمى عام</string>
    <string name="wbtn25">توكيل خاص بالصفه من توكيل رسمى عام</string>
    <string name="wbtn26">اقرار بالتصالح</string>
    <string name="text_1">1- اصل بطاقة الرقم القومى سارية للموكل 2- فى حالة احتوائه على القضايا يجب ان يكون الوكيل محامى أو قريب حتى الدرجة الثالثة 3- اسم الوكيل ووظيفته وعنوانه وجنسيته</string>
    <string name="text_2">1- اصل بطاقة الرقم القومى سارية للموكل 2- فى حالة احتوائه على القضايا يجب ان يكون الوكيل محامى 3- اسم الوكيل ووظيفته وعنوانه وجنسيته</string>
    <string name="text_3">1- اصل بطاقة الرقم القومى سارية للموكل 2- يجب ان يكون الوكيل محامى 3- اسم الوكيل ووظيفته وعنوانه وجنسيته</string>
    <string name="text_4">1- اصل بطاقة الرقم القومى سارية للموكل 2- اسم الوكيل ووظيفته وعنوانه وجنسيته 3- يجب ان يكون الوكيل محاسب</string>
    <string name="text_5">1- اصل بطاقة الرقم القومى سارية للموكل 2- اسم الوكيل ووظيفته وعنوانه وجنسيته</string>
    <string name="text_6">1- اصل بطاقة الرقم القومى سارية للموكل 2- اسم الوكيل ووظيفته وعنوانه وجنسيته</string>
    <string name="text_7">1- اصل بطاقة الرقم القومى سارية للموكل 2- يجب ان يكون الوكيل محامى أو قريب حتى الدرجة الثالثة 3- اسم الوكيل ووظيفته وعنوانه وجنسيته</string>
    <string name="text_8">1- اصل بطاقة الرقم القومى سارية للموكل 2- اسم الوكيل ووظيفته وعنوانه وجنسيته</string>
    <string name="text_9">1- اصل بطاقة الرقم القومى سارية للطرفين 2- حضور الطرفين 3- اصل عقد الايجار</string>
    <string name="text_10">1- اصل بطاقة الرقم القومى سارية لصاحب الشأن 2- اصل المحرر</string>
    <string name="text_11">1- اصل بطاقة الرقم القومى سارية للبائع 2- رخصة السيارة سارية أو شهادة بيانات حديثة لا تزيد عن شهر من المرور فى حالة انتهاء الرخصة مع سحبها 3- اسم المشترى ووظيفته وعنوانه وجنسيته</string>
    <string name="text_12">1- اصل بطاقة الرقم القومى سارية للموكل 2- اسم الوكيل ووظيفته وعنوانه وجنسيته</string>
    <string name="text_13">1- اصل طاقة الرقم القومى سارية للموكل 2- رخصة السيارة سارية أو شهادة بيانات حديثة لا تزيد عن شهر من المرور فى حالة انتهاء الرخصة مع سحبها 3- اسم الوكيل ووظيفته وعنوانه وجنسيته</string>
    <string name="text_14">1- اصل بطاقة الرقم القومى سارية للطرفين 2- حضور الطرفين</string>
    <string name="text_15">1- اصل بطاقة الرقم القومى سارية لصاحب الشركة أو المؤسسة مع احضار صفته الرسمية 2- اصل الشهادة</string>
    <string name="text_16">1- اصل بطاقة الرقم القومى سارية لصاحب الشأن 2- اصل المحرر المراد اثبات تاريخه قائمة منقولات او عقد ايجار بشرط ان يكون الاختصاص مكانيا (كل فرع توثيق يخدم القسم التابع له فقط)</string>
    <string name="text_17">1- اصل بطاقة الرقم القومى سارية لصاحب الشأن 2- ان يكون ذو صفة مع احضار اصل ما يثبت ذلك للاطلاع 3- رقم محضر التصديق والحرف والسنة المراد استخراج شهادة منه</string>
    <string name="text_18">1- اصل بطاقة الرقم القومى سارية لصاحب الشأن 2- ان يكون ذو صفة مع احضار اصل ما يثبت ذلك للاطلاع 3- رقم المحرر والحرف والسنة المراد استخراج صورة رسمية منه</string>
    <string name="text_19">1- اصل بطاقة الرقم القومى سارية لصاحب الشأن 2- ان يكون ذو صفة مع احضار اصل ما يثبت ذلك للاطلاع 3- رقم الايصال والمجموعة المراد استخراج شهادة منه</string>
    <string name="text_20">1- اصل بطاقة الرقم القومى سارية للشهود 2- اصل الاقرار</string>
    <string name="text_21">1- اصل بطاقة الرقم القومى سارية لصاحب الشأن 2- رقم المحرر والحرف والسنة المراد الاطلاع عليه</string>
    <string name="text_22">1- اصل بطاقة الرقم القومى سارية لصاحب الشأن وصورة منها 2- اصل السجل التجارى سارى لا يزيد عن خمس سنوات للاطلاع وصورة منه 3- السجلات التجاربة المراد توثيقها 4- اصل التفويض على ورق الشركة مختوم بخاتم الشركة وموقع من مدير الشركة فى حالة شركات المسئولية المحدودة أو من رئيس مجلس الادارة فى حالة شركات ا</string>
    <string name="text_23">1- اصل بطاقة الرقم القومى سارية للموكل 2- فى حالة احتوائه على القضايا يجب ان يكون الوكيل محامى 3- اسم الوكيل ووظيفته وعنوانه وجنسيته 4- اصل السجل التجارى سارى لا يزيد عن خمس سنوات المراد عمل الصفة منه مع سحبه وصورة منه 5- يجب ان يكون السجل التجارى منصوص على الصفة المراد توثيقها بالتوكيل</string>
    <string name="text_24">1- اصل بطاقة الرقم القومى سارية للموكل 2- اسم الوكيل ووظيفته وعنوانه وجنسيته 3- اصل التوكيل المراد عمل الصفة منه مع الاحتفاظ باصل التوكيل الصفة اذا كان من غير نفس المكتب</string>
    <string name="text_25">1- اصل بطاقة الرقم القومى سارية للموكل 2- اسم الوكيل ووظيفته وعنوانه وجنسيته</string>
    <string name="text_26">1- اصل بطاقة الرقم القومى سارية لصاحب الشأن 2- رقم القضية</string>
    <string name="t1">الشهر العقاري هو مصلحه قانونيه مهمهتها الاساسيه نقل ملكيه والحفاظ على الملكيه تنقسم الى مكاتب التوثيق ومأموريات شهر العقارى مكاتب التوثيق :مسئوله عن التوكيلات عامه وخاصه وكل انواع التوكيلات مأوريات الشهر العقارى :مسئوله عن نقل ملكيه يعنى نقل التسجيل من شخص لاخر</string>
    <string name="t2">مصلحة الشهر العقاري والتوثيق أنشئت بموجب القانون رقم 114 لسنه 1946 م وهو العام الذي انشأ فيه الشهر العقاري جنبا إلى جنب مع إنشاء اعرق المؤسسات القضائية إلا وهو مجلس الدولة المصري في عهد الملك فاروق وحكومة التكنوقراط إسماعيل صدقي باشا و تحت رعاية واهتمام وإصرار وزير العدل المصري في ذلك الوقت المستشار محمد كامل مرسي باشا ومجهوده وأفكاره العظيمة لتطوير منظومة العدالة بمصر وقتها في إنشاء هذان الكيانين مجلس الدولة والشهر العقاري والتوثيق وفقا للنظام الفرنسي خلال عام1946.</string>
    <string name="t3">ما هي خدمات مكاتب الشهر العقاري ؟ تقوم مكاتب الشهر العقارى بالمحافظات بالآتى :- • مراجعة المحررات المقدمة للشهر بعد التأشير على مشروعاتها من المأموريات المختصة بالصلاحية للشهر (المراجعة الفنية) • إثبات المحررات فى دفاتر الشهر والتأشير عليها بما يفيد شهرها • تصوير المحررات التى يطلب شهرها • حفظ أصول المحررات التى تشهر وموافاة الجهات المختصة بصور منها • إعطاء الشهادات العقارية • إعداد فهارس المحررات التى تشهر • التأشيرات الهامشية وإرسال صور منها للمكتب الرئيسى الإدارة العامة للمحفوظات • إعطاء صور من المحررات التى تم شهرها ومرفقاتها • الترخيص بالاطلاع كما تعتبر مكاتب الشهر جهة خبرة فيما يطلب إليها دراسته من الجهات القضائية وذلك بالنسبة إلى الحقوق العينية العقارية.</string>
    <string name="t4">ما هي تكاليف هذه الخدمات؟ تشجيعاً على إقبال المواطنين لتسجيل ما لديهم من عقارات فقد تم تخفيض رسوم التوثيق والشهر بناء على التعديلات الصادرة بالقانون رقم 83 لسنة 2006 المعدل لبعض أحكام القرار بالقانون رقم 70 لسنة 1964 بشأن رسوم التوثيق والشهر وقانون نظام السجل العينى الصادر بالقرار بالقانون رقم 142 لسنة 1964 على النحو الوارد مضمونه بنص المادة الأولى من أنه: لا يجوز أن تتجاوز الرسوم التى يتم تحصيلها على أعمال شهر المحررات وصحف الدعاوى وكافة الأعمال اللازمة لإتمامه – بما فى ذلك تكلفة الأعمال المساحية – طبقا للأحكام المقررة قانونا مبلغ ألفى جنيه عن شهر كل تصرف أوموضوع أو عن وحدة عقارية فى محرر أو قيد فى كل صحيفة وحدة عقارية فى السجل العينى . ويصدر بتحديد فئات الرسوم المشار إليها قرار من وزير العدل . أولاً: فئات رسوم التوثيق والشهر : • عشرة جنيهات عن الورقة الأولى من المحررات المطلوب توثيقها ( الشهادات ) ، وخمسة جنيهات عن كل ورقة تالية • خمسة عشر جنيها عن كل إشهاد من الشهادات الحالة المدنية وكل توكيل من التوكيلات المتعلقة بها ، والواردة بالجدول حرف (ج) المرفق بالقانون رقم 70 لسنة 1964 المشار إليه • عشرة جنيهات عن التصديق على كل إمضاء أو ختم ، فيما عدا التصديق على التوكيل الخاص بالمعاش فيكون الرسم خمسة جنيهات • خمسة جنيهات عن كل صفحة تصور من المحررات والأوراق الأخرى التى يجوز الحصول على صورة منها ، وعن كل ورقة من الصور الخطية والشهادات والملخصات المطلوب استخراجها من السجلات والمحررات ومرفقاتها • خمسة عشر جنيها عن كل صورة أو ملخص أو شهادة فى أمور الزوجية وما يتعلق بها ، ونفقات الأقارب مهما كان عدد أوراقها • خمسة عشر جنيها عن كل تأشير بهوامش السجلات والمحررات • خمسة جنيهات للبحث فى السجلات والفهارس لاستخراج صورة أو شهادة أو ملخص للإطلاع ، ( الكشف النظرى ) وذلك عن كل إسم فى كل سنة ، ويتعدد هذا الرسم بتعدد النواحى أو الأقسام فى المدة التى يشملها الكشف إن كان لكل ناحية فهرس مستقل ، ويبدأ حساب السنة من اليوم الموضح فى الطلب ، مع احتساب كسور السنة سنة كاملة • عشرة جنيها للإطلاع ( الكشف النظرى ) عن كل مادة يراد الإطلاع عليها فى مكاتب الشهر ومأمورياتها ، ومكاتب التوثيق وفروعها • ثلاثون جنيها عن انتقال الموثق خارج مكاتب التوثيق وفروعه، لتوثيق المحررات الرسمية أو للتصديق على التوقيعات فى المحررات العرفية ، وذلك خلاف مصروفات الانتقال، ويتعدد هذا الرسم بتعدد المحررات ، ولو إتحد أصحاب الشأن، وإذا تعددت الموضوعات فى محرر واحد وكان لكل منها أثار قانونية مستقلة ، استحق رسم الانتقال كاملا عن أحدها ونصفه عن كل من الباقى • خمسة عشر جنيها عن كل تأشير لإثبات التاريخ • خمسة عشر جنيها عن كل ورقة من الأصل المطلوبة ترجمته . ثانيا : فئات رسوم خاصة بتكلفة الأعمال المساحية :- • بالنسبة للعقارات المبنية والأراضى الفضاء وما فى حكمها:- خمسمائة جنيه حتى مسطح 100 مترا مربعا ألف جنيه حتى مسطح 200 مترا مربعا ألف وخمسمائة جنيه حتى مسطح 300 مترا مربعا . • بالنسبة للأراضى الزراعية والأراضى الصحراوية والأراضى البور خارج كردون المدن وما فى حكمها :- خمسمائة جنيه حتى خمسة أفدنة ألف جنيه حتى عشرة أفدنة ألفا جنيه فيما جاوز عشرة أفدنة ويتعدد الرسم بتعدد التصرفات أو الموضوعات أو الوحدات العقارية أو القيود فى صحيفة وحدة عقارية .</string>
    <string name="q4">تكاليف خدمات الشهر العقاري</string>
    <string name="q5"><![CDATA[ارشادات عامه الخطوه الاولى : خدمه المواطنين :الكتابه النموذج الخاص بك ببطاقه الرقم القومى ساريه واذا كانت منتهيه عليك ارفاق جواز سفر او رخصه قياده او رخصه سلاح مع البطاقه المنتهيه لعمل الاجراء. الخطوه الثانيه: التاشير على الاجراء من الموظف المختص بخدمه المواطنين :وهو كتابه ايم عضو فنى لمراجعه الاجراء قانونيا والتاشير منه للذهاب الى القسم المالى لتقرير قيمه الرسوم ع الاجراء. الخطوه الثالثه : الاتجاه للخزينه لدفع الرسوم واستلام الايصال  والرجوع الى العضو الفنى المكتوب اسمه على الاجراء الذى تحمله وتوقيع امامه بالدفتر. الخطوه الرابعه : الذهاب الى الميكروفلم وذلك لتوثيقه وتصويره ضمانا لحفظه فى حاله فقده او تلفه حتى تستطيع استخراج صوره منه مره ثانيه بسهوله. الخطوه الخامسه: ختم اجراء من مدير شهرالعقاري. يبدا عمل بالخزنه ساعه 9 صباحا وينتهى ٤ مساء]]></string>
    <string name="a5">ارشادات عامه للشهر العقارى</string>
    <string name="q3">خدمات مكاتب الشهر العقارى</string>
    <string name="q2">انشاء الشهر العقاري</string>
    <string name="q1">الشهر العقاري</string>
</resources>